# tortoisebot_pro_max

./: README.md  battery_log.csv  demo.sh  getip  install.sh  requirements.txt  start.sh
services/: rbl_upstart.service
tortoisebotpromax_bringup/: CMakeLists.txt  package.xml
tortoisebotpromax_bringup/launch/: autobringup.launch.py  bringup.launch.py
tortoisebotpromax_description/: CMakeLists.txt  package.xml
tortoisebotpromax_description/launch/: display.launch.py  rviz.launch.py  state_publisher.launch.py
tortoisebotpromax_description/meshes/: back_castor_1.dae  front_castor_1.dae  imu_1.dae  left_wheel_1.dae  lidar_1.dae  lidar_base_1.dae  realsense_1.dae  right_wheel_1.dae
tortoisebotpromax_description/rviz/: navigation.rviz  simulation.rviz
tortoisebotpromax_description/urdf/: materials.xacro  tortoisebotpromax.gazebo  tortoisebotpromax.trans  tortoisebotpromax.xacro  tortoisebotpromax_sim.xacro
tortoisebotpromax_firmware/: CMakeLists.txt  package.xml
tortoisebotpromax_firmware/config/: X4_Pro_params.yaml
tortoisebotpromax_firmware/launch/: auto_joy.launch  auto_joy_teleop.launch.py  bringup.launch  demo_mode.launch  hubble_scripts.launch.py  micro_ros.launch.py  realsense_d435i.launch.py  scan_merger.launch  ydlidar_s2.launch
tortoisebotpromax_firmware/scripts/: rbl_logger.py  robot_diagnostics.py
tortoisebotpromax_firmware/src/: goal_status_publisher.cpp  network_status_publisher.cpp
tortoisebotpromax_gazebo/: CMakeLists.txt  package.xml
tortoisebotpromax_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py  tortoisebotpromax_playground.launch
tortoisebotpromax_navigation/: CMakeLists.txt  package.xml
tortoisebotpromax_navigation/config/: nav2_params.yaml
tortoisebotpromax_navigation/launch/: amcl.launch  carto_navigation.launch  gmap_amcl.launch  map_saver.launch.py  move_base.launch  navigation.launch.py
tortoisebotpromax_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
tortoisebotpromax_odometry/: CMakeLists.txt  package.xml
tortoisebotpromax_odometry/launch/: carto_odometry.launch
tortoisebotpromax_slam/: CMakeLists.txt  package.xml
tortoisebotpromax_slam/config/: ekf.yaml  gmapping.yaml  slam_toolbox_params.yaml
tortoisebotpromax_slam/launch/: carto_slam.launch  cartographer.launch.py  gmapping_slam.launch  map_saver.launch  slam_toolbox.launch.py
tortoisebotpromax_slam/rviz/: mapping.rviz  sensors.rviz  tortoisebotpromax_gmapping.rviz
