<?xml version="1.0"?>
<package format="2">
  <name>tortoisebotpromax_odometry</name>
  <version>0.0.0</version>
  <description>The tortoisebotpromax_odometry package</description>

  <maintainer email="kartiksoni@rigbetellabs.com">Kartik Soni</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tortoisebotpromax_firmware</depend>
  <depend>cartographer_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>robot_localization</depend>
  <depend>rospy</depend>
  <depend>rtabmap_odom</depend>
  <depend>tf2_ros</depend>

</package>
